Fix newsletter button width for doesn't break the layout

--- a/css/main.sass
+++ b/css/main.sass
@@ -685,22 +685,20 @@ pre
   border-radius: 30px 0 0 30px
   padding: 11px 5px 5px 5px
   width: 300px
-  width: 57% !important
   float: left
   text-align: center
   border: 2px solid #EEE
   border-radius: 30px 0 0 30px
   padding: 11px 5px 5px 5px
-  width: 440px
+  width: 55% !important
   float: left
   text-align: center
   border: 2px solid #EEE
   height: 25px
-  @include respond-to(460)
-    width: 57%
 
 .btn.btn-newsletter
   border-radius: 0 30px 30px 0 !important
+  width: 37% !important
   min-width: 30% !important
   color: #2a7ae2
   cursor: pointer
@@ -711,7 +709,6 @@ pre
   text-rendering: optimizelegibility
   vertical-align: middle
   white-space: nowrap
-  width: 37% !important
   background: rgba(0, 0, 0, 0) none repeat scroll 0% 0% / auto padding-box border-box
   border: 1px solid #2a7ae2
   border-radius: 14985px 14985px 14985px 14985px
@@ -720,11 +717,6 @@ pre
   outline: #2a7ae2 none 0px
   padding: 0 13px
   transition: background-color 0.1s ease 0s, border-color 0.1s ease 0s, color 0.1s ease 0s
-
-  @include respond-to(460)
-    width: 37% !important
-    float: right
-    min-width: 30% !important
 
 .newsletter-content
   margin-bottom: 50px
